--- a/build
+++ b/build
@@ -15,3 +15,32 @@ https://pobb.in/Aa43dC1z-pto
 
 from 
 Haloplasm (https://gist.github.com/Haloplasm/d648824707c5bed104469ff8aec8d800)
+
+
+==============================================================================================================
+
+snapow six man group build (https://www.youtube.com/watch?v=pvvuYuacqHU&ab_channel=SnapOW)
+
+1a. Spark Deadeye: 
+https://pobb.in/aHOUq-haJLXT
+
+1b. Spark Trickster: 
+https://pobb.in/HfIJ3ADQW_5q
+
+2. Auras: 
+https://pobb.in/pD8U1uQADDhD
+
+3. Mana Guardian: 
+https://pobb.in/vAsmC3oDBZa6
+
+4. Culler: 
+https://pobb.in/G3lM9dXkAW6Q
+
+5. Curses: 
+https://pobb.in/IzYvfKAv6yK3
+
+6a. Fast boi (ghostbuster support): 
+https://pobb.in/7wwtTmkvBrGN
+
+6b. Miner support: 
+https://pobb.in/MtIP5SklOdED
