--- a/build
+++ b/build
@@ -13,6 +13,24 @@ https://pobb.in/kkTJT28eiAqR
 Mana Guardian Cursebot: 
 https://pobb.in/Aa43dC1z-pto
 
+----------------------------------------------
+Outdated 3.21 PoBs
+----------------------------------------------
+Inquisitor Spark carry: 
+https://pobb.in/mJe6EepydcmO
+
+Aurabot: 
+https://pobb.in/JoZG5CpIitqt
+
+Deadeye TS carry: (not configured with aurabot stats yet): 
+https://pobb.in/fnJa96ozzCHe
+
+Mana Guardian Cursebot: 
+https://pobb.in/pPMYowSsnE0t
+
+Optional endgame Assassin PoB for 3+man parties: 
+https://pobb.in/quaaX_vnHuS5
+
 from 
 Haloplasm (https://gist.github.com/Haloplasm/d648824707c5bed104469ff8aec8d800)
 
