--- a/build
+++ b/build
@@ -57,7 +57,7 @@ https://pobb.in/G3lM9dXkAW6Q
 5. Curses: 
 https://pobb.in/IzYvfKAv6yK3
 
-6a. Fast boi (ghostbuster support): 
+6a. Fast boi (ghostbuster support): #When all players in the party are in the map, that's when he start running..#
 https://pobb.in/7wwtTmkvBrGN
 
 6b. Miner support: 
