Update build - updated snapshots

--- a/build
+++ b/build
@@ -65,14 +65,23 @@ https://pobb.in/MtIP5SklOdED
 
 ----------------------------------------------------------------------------------------
 
-Build Snapshots
+BUILD SNAPSHOTS
 
-Spark Trickster: https://pobb.in/bceZo_YlVo4F  
-Aurabot: https://pobb.in/6g0s5uROfyT2          
-Curses: https://pobb.in/ADV22saNzYr4
-Mana Guardian: https://pobb.in/mVTDG3JPBlar
-Culler: https://pobb.in/_Ra807vD3yJ1
-Ghostbuster: https://pobb.in/Spmbs3waziAQ
+1. Spark Trickster: https://pobb.in/bceZo_YlVo4F
+2. Aurabot: https://pobb.in/6g0s5uROfyT2
+3. Curses: https://pobb.in/ADV22saNzYr4
+4. Mana Guardian: https://pobb.in/mVTDG3JPBlar
+5. Culler: https://pobb.in/_Ra807vD3yJ1
+6. Ghostbuster: https://pobb.in/Spmbs3waziAQ
+
+Cheap Aurabot with tattoos:
+https://pobb.in/pRjvuzrbu9Zb
+
+Atlas tree:
+https://poeplanner.com/a/r0S
+
+Mapwatch data:
+https://docs.google.com/spreadsheets/d/1QkTx6uHTwc4ofzucDaIlZafNWUEEfosiaHCv4weZmtI/edit?usp=sharing
 
 ----------------------------------------------------------------------------------------
 
